--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -153,6 +153,7 @@ Format: `delete INDEX`
 ****
 * `INDEX` refers to the index number shown in the displayed list.
 * `INDEX` must be a positive integer 1, 2, 3...
+* If the wish at `INDEX` is not yet fulfilled, the saved amount in that wish will be channelled to unusedFunds.
 ****
 
 Examples:
@@ -189,11 +190,12 @@ Selects the 1st wish in the results of the `find` command.
 === Save money for a particular wish: `save`
 
 Channels savings for a specified wish. +
-Format: `save [INDEX] s/AMOUNT`
+Format: `save INDEX AMOUNT`
 
 ****
-* `INDEX` should be a positive integer 1, 2, 3… no larger than the number of wishes
-* If no `INDEX` is specified, money will be transferred to the wish which has the closest due date.
+* `INDEX` should be a positive integer 1, 2, 3… no larger than the number of wishes.
+* If `INDEX` is 0, AMOUNT will be channelled directly to unusedFunds.
+* If `AMOUNT` saved to INDEX is greater than the amount needed to fulfil that wish, excess funds will be channelled to unusedFunds.
 * If `AMOUNT` is negative, money will be removed from savings for that wish. +
 * If `AMOUNT` brings the savings value to below 0, `AMOUNT` will not be accepted.
 * If wish at `INDEX` is already fulfilled, `AMOUNT` will not accepted.
@@ -201,11 +203,42 @@ Format: `save [INDEX] s/AMOUNT`
 
 Examples: +
 
-* `save 1 s/1000` +
+* `save 1 1000` +
 Attempt to save $1000 for the wish at index 1.
 
-* `save 1 s/-100.50` +
- Attempt to remove $100.50 from the savings for the wish at index 1.
+* `save 1 -100.50` +
+Attempt to remove $100.50 from the savings for the wish at index 1.
+
+* `save 0 100.50` +
+Attempt save $100.50 to unusedFunds.
+
+
+=== Move money between wishes: 'move'
+
+Moves funds from one wish to another. +
+Format: `move FROM_WISH_INDEX TO_WISH_INDEX AMOUNT`
+
+****
+* `FROM_WISH_INDEX` and `TO_WISH_INDEX` should be a positive integer 1, 2, 3… no larger than the number of wishes
+* If `FROM_WISH_INDEX` is 0, AMOUNT will be channelled from unusedFunds to `TO_WISH_INDEX`.
+* If `TO_WISH_INDEX` is 0, AMOUNT will be channelled from `FROM_WISH_INDEX` to unusedFunds.
+* If `FROM_WISH_INDEX` equals `TO_WISH_INDEX`, both indexes will not be accepted.
+* If `AMOUNT` saved to `TO_WISH_INDEX` is greater than the amount needed to fulfil that wish, excess funds will be channelled to unusedFunds.
+* If `AMOUNT` is negative, `AMOUNT` will not be accepted. +
+* If `AMOUNT` brings the savings amount of wish at `FROM_WISH_INDEX` to below 0, `AMOUNT` will not be accepted.
+* If wish at `FROM_WISH_INDEX` or `TO_WISH_INDEX` is already fulfilled, `AMOUNT` will not accepted.
+****
+
+Examples: +
+
+* `move 1 2 10` +
+Attempt to move $10 from the wish at index 1 to the wish at index 2.
+
+* `move 0 1 10` +
+Attempt to move $10 from unusedFunds to the wish at index 1.
+
+* `move 1 0 10` +
+Attempt to move $10 from the wish at index 1 to unusedFunds.
 
 === Editing a remark for a wish : `remark`
 
@@ -320,8 +353,10 @@ e.g. `find d/22`
 * *Help* : `help`
 * *Select* : `select INDEX` +
 e.g.`select 2`
-* *Save* : `save [INDEX] s/AMOUNT` +
-e.g. `save 1 s/1000`
+* *Save* : `save INDEX AMOUNT` +
+e.g. `save 1 1000`
+* *Move* : `move FROM_WISH_INDEX TO_WISH_INDEX AMOUNT` +
+e.g. `move 1 2 10`
 * *Command History* : `history -c`
 * *Savings History* : `history -s`
 * *Remark* : `remark INDEX r/[REMARK]`
